--- a/src/App.css
+++ b/src/App.css
@@ -361,3 +361,17 @@ input[type="radio"]:checked:after {
   font-size: 1.7rem;
   font-weight: bolder;
 }
+
+.profile-nav {
+  border: 2px solid #22bf6c;
+}
+
+.profile-item {
+  font-weight: bolder;
+}
+
+.profile-item:hover,
+.active-profile-item {
+  background-color: #22bf6c;
+  color: white;
+}
