--- a/src/App.css
+++ b/src/App.css
@@ -482,6 +482,10 @@ input::-webkit-inner-spin-button {
   width: 160px;
 }
 
+.b-bot {
+  border-bottom: 1px solid white;
+}
+
 .profile-name {
   font-size: 1.7rem;
   font-weight: bolder;
@@ -628,4 +632,63 @@ input::-webkit-inner-spin-button {
 
 input:disabled {
   cursor: not-allowed;
+}
+.timeline {
+  position: relative;
+  list-style: none;
+  padding: 1rem 0;
+  margin: 0;
+}
+
+.timeline::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  margin-left: -1px;
+  background-color: black;
+}
+
+.timeline-element {
+  position: relative;
+  width: 50%;
+  padding: 1rem 0;
+  padding-right: 2.5rem;
+  text-align: right;
+}
+
+.timeline-element::before {
+  content: "";
+  position: absolute;
+  right: -8px;
+  top: 1.35rem;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 2px solid black;
+  background-color: #fff;
+}
+
+.timeline-element:nth-child(even)::before {
+  right: auto;
+  left: -8px;
+}
+
+.timeline-element:nth-child(even) {
+  margin-left: 50%;
+  padding-left: 2.5rem;
+  padding-right: 0;
+  text-align: left;
+}
+
+.navbar-toggler {
+  border-color: white !important;
+}
+
+.nav-menu-pic {
+  width: 98.9vw;
+  height: 78vh;
 }
