--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   font-family: "Noto Sans JP", sans-serif;
+  transition: 0.5s all !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
